--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,6 +14,7 @@
                 {{ form|crispy }}
                 <button type="submit" class="btn btn-sm btn-outline-primary mt-5">Login</button>
             </form>
+            <p class="mt-2">or <a href="{% url 'django_registration_register' %}">Create account</a></p>
           </div>
       </div>
     </div>
