--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,7 @@
     {% endblock %}
 </head>
 <body>
-    {% block navbar %}
-    {% endblock %}
+    {% include 'navbar.html' %}
     <div class="container">
     {% block content %}
     {% endblock %}
