setting up the API call for profile and gas station

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,6 +2,9 @@
 
 {% load crispy_forms_tags %}
 
+{% block navbar %}
+{% endblock %}
+
 {% block auth %}
     <div class="col-md-12">
       <div class="card text-center">
