--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -6,22 +6,77 @@
 <div id="pos-profile">
     <h1 class="profile-header">Profile Tab</h1>
     <hr>
-    <div class="col-md-12 col-sm-12">
-        <div class="card profile">
+    <div class="col-md-6 col-sm-12">
+        <div v-if="loading" class="text-center">
+            <div class="spinner-grow text-primary" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+        <div class="card profile" v-else>
             <h5 class="card-header">Account information</h5>
             <div class="card-body" v-for="profile in profiles" :key="profile">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-12 col-sm-12">
                     <label>Full name:</label> [[ profile.full_name ]]
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-12 col-sm-12">
                     <label>Nickname:</label> [[ profile.nickname ]]
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-12 col-sm-12">
                     <label>Position:</label> [[ profile.position ]]
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-12 col-sm-12">
                     <label>birthdate:</label> [[ profile.birthdate ]]
                 </div>
+                <button type="button" class="btn btn-primary btn-sm btn-block" data-toggle="modal"
+                    data-target="#profileModal" v-on:click="fetchLoginCredential(profile.id)">Edit</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="profileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form v-on:submit.prevent="updateLogin">
+                    <div class="modal-body">
+
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label>First name</label>
+                                <input type="text" v-model="currentProfile.first_name" class="form-control"
+                                    placeholder="First name">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Last name</label>
+                                <input type="text" v-model="currentProfile.last_name" class="form-control"
+                                    placeholder="Last name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Nickname</label>
+                            <input type="text" v-model="currentProfile.nickname" class="form-control"
+                                placeholder="Nickname">
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-12">
+                                <label for="inputCity">Birthdate</label>
+                                <input type="date" v-model="currentProfile.birthdate" class="form-control">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
