--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -46,35 +46,48 @@
                 </div>
                 <form v-on:submit.prevent="updateLogin">
                     <div class="modal-body">
-
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label>First name</label>
-                                <input type="text" v-model="currentProfile.first_name" class="form-control"
-                                    placeholder="First name">
+                        <template v-if="viewing">
+                            <div class="text-center">
+                                <div class="spinner-grow text-primary" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
                             </div>
-                            <div class="form-group col-md-6">
-                                <label>Last name</label>
-                                <input type="text" v-model="currentProfile.last_name" class="form-control"
-                                    placeholder="Last name">
+                        </template>
+                        <template v-else>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label>First name</label>
+                                    <input type="text" v-model="currentProfile.first_name" class="form-control"
+                                        placeholder="First name">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label>Last name</label>
+                                    <input type="text" v-model="currentProfile.last_name" class="form-control"
+                                        placeholder="Last name">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label>Nickname</label>
-                            <input type="text" v-model="currentProfile.nickname" class="form-control"
-                                placeholder="Nickname">
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group col-md-12">
-                                <label for="inputCity">Birthdate</label>
-                                <input type="date" v-model="currentProfile.birthdate" class="form-control">
+                            <div class="form-group">
+                                <label>Nickname</label>
+                                <input type="text" v-model="currentProfile.nickname" class="form-control"
+                                    placeholder="Nickname">
                             </div>
-                        </div>
-
+                            <div class="form-row">
+                                <div class="form-group col-md-12">
+                                    <label for="inputCity">Birthdate</label>
+                                    <input type="date" v-model="currentProfile.birthdate" class="form-control">
+                                </div>
+                            </div>
+                        </template>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <template v-if="saving">
+                            <button type="button" class="btn btn-primary" disabled><i class="fa fa-spinner fa-spin"></i> Save
+                                changes</button>
+                        </template>
+                        <template v-else>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </template>
                     </div>
                 </form>
             </div>
