added gasoline station table

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-            <a class="nav-link" href="#">Gas Station</a>
+            <a class="nav-link" href="{% url 'gas' %}">Gas Station</a>
             </li>
         </ul>
         <span class="nav-item dropdown navbar-right">
