--- a/templates/gas/GasTable.html
+++ b/templates/gas/GasTable.html
@@ -3,11 +3,16 @@
 {% load static %}
 
 {% block content %}
-<div id="pos-gas">
+<div id="pos-gas" v-cloak>
     <div class="mt-3">
         <h1>Manage Gasoline Stations</h1>
     </div>
-    <div class="card mt-5">
+    <div v-if="loading" class="text-center mt-5">
+        <div class="spinner-grow text-primary" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+    <div class="card mt-5" v-else>
         <div class="card-header">List Gasoline Stations</div>
         <div class="card-body">
             <div class="table-responsive">
@@ -20,11 +25,12 @@
                             <th scope="col">Site Staffs</th>
                             <th scope="col">Pricing for specific type of Fuel</th>
                             <th scope="col">Price management flexibility</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="6" class="text-center bg-warning" v-if="!gasStations.length">
+                            <td colspan="7" class="text-center bg-warning" v-if="!gasStations.length">
                                 Currently there's no Gas Station added.
                             </td>
                         </tr>
@@ -35,9 +41,50 @@
                             <td>[[ gas.site_staff.toString() ]]</td>
                             <td>[[ gas.pricing_for_specific_type_of_fuel ]]</td>
                             <td>[[ gas.price_management_flexibility ]]</td>
+                            <td><a href="#" data-toggle="modal" v-on:click="fetchGasStation(gas.id)"
+                                data-target="#gasStationModal" class="badge badge-info">Edit</a></td>
                         </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="gasStationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form v-on:submit.prevent="updateGas">
+                    <div class="modal-body">
+                        <template v-if="viewing">
+                            <div class="text-center">
+                                <div class="spinner-grow text-primary" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
+                            </div>
+                        </template>
+                        <template v-else>
+                            {% include 'gas/GasEdit.html' %}
+                        </template>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <template v-if="saving">
+                            <button type="button" class="btn btn-primary" disabled><i class="fa fa-spinner fa-spin"></i> Save
+                                changes</button>
+                        </template>
+                        <template v-else>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </template>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
