added block navbar

--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -3,6 +3,9 @@
 
 {% load crispy_forms_tags %}
 
+{% block navbar %}
+{% endblock %}
+
 {% block auth %}
 <div class="card text-center">
     <div class="card-header">
