added cards for the home screen/page

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,30 @@
 {% endblock %}
 
 {% block content %}
+
+<div class="container">
+    <div class="card-group">
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
+            <div class="card mb-3">
+                <a href="{% url 'gas' %}" class="card-header">Gas Station</a>
+                <div class="card-body">
+                    <p class="card-text">View all <strong>Gas Station</strong> data.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
+            <div class="card mb-3">
+                <a href="{% url 'profile' %}" class="card-header">Profile</a>
+                <div class="card-body">
+                    <p class="card-text">View your <strong>Profile</strong> data. <br>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 
 {% block api %}
