--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,20 +6,21 @@
 {% endblock %}
 
 {% block auth %}
-    <div class="col-md-12">
-      <div class="card text-center">
-          <div class="card-header">
-            Login
-          </div>
-          <div class="card-body">
-            <form method="POST">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button type="submit" class="btn btn-sm btn-outline-primary mt-5">Login</button>
-            </form>
-          </div>
-      </div>
+<div class="col-md-12">
+  <div class="card text-center">
+    <div class="card-header">
+      Login
     </div>
+    <div class="card-body">
+      <form method="POST">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-sm btn-outline-primary mt-5">Login</button>
+      </form>
+      <p class="mt-2">or <a href="{% url 'django_registration_register' %}">Create account</a></p>
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 {% block api %}
