--- a/templates/gas/GasEdit.html
+++ b/templates/gas/GasEdit.html
@@ -1,4 +1,6 @@
 <div class="form-row">
+    {% if request.user.position == 'Manager' and request.user.position == 'Cashier' %}
+    {% elif request.user.position == 'Owner' %}
     <div class="form-group col-md-12">
         <label>Site Manager</label>
         <select class="custom-select" v-model="currentGas.site_manager">
@@ -13,6 +15,7 @@
             <option v-for="staff in staffs">[[ staff.full_name ]]</option>
           </select>
     </div>
+    {% endif %}
 </div>
 <div class="form-group">
     <label>Name</label>
@@ -25,6 +28,15 @@
     </div>
 </div>
 <div class="form-row">
+    <div class="form-group col-md-12">
+        <label for="inputCity">Sales</label>
+        <input type="text" v-model="currentGas.sales" class="form-control"
+        {% if request.user.position == 'Cashier' %} disabled {% endif %}>
+    </div>
+    <div class="form-group col-md-12">
+        <label for="inputCity">Volume of gasoline</label>
+        <input type="text" v-model="currentGas.volume_of_gasoline" class="form-control">
+    </div>
     <div class="form-group col-md-12">
         <label for="inputCity">Price management flexibility</label>
         <input type="text" v-model="currentGas.price_management_flexibility" class="form-control">
