--- a/templates/gas/GasEdit.html
+++ b/templates/gas/GasEdit.html
@@ -42,6 +42,19 @@
         <input type="text" v-model="currentGas.price_management_flexibility" class="form-control">
     </div>
 </div>
+<hr>
+<h5>Important Info</h5>
+<div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="inputCity">Created by</label>
+        <input type="text" v-model="currentGas.created_by_staff" disabled class="form-control"
+        {% if request.user.position == 'Cashier' %} disabled {% endif %}>
+    </div>
+    <div class="form-group col-md-6">
+        <label for="inputCity">Updated by</label>
+        <input type="text" v-model="currentGas.updated_by_manager" disabled class="form-control">
+    </div>
+</div>
 <!-- <div class="form-row">
     <div class="form-group col-md-12">
         <label for="inputCity">Pricing for specific type of fuel</label>
