added sales api and interface in the site

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,15 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
+                <a href="{% url 'sales' %}" class="card-header">Sales</a>
+                <div class="card-body">
+                    <p class="card-text">View all <strong>Sales</strong> data for today.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
+            <div class="card mb-3">
                 <a href="{% url 'profile' %}" class="card-header">Profile</a>
                 <div class="card-body">
                     <p class="card-text">View your <strong>Profile</strong> data. <br>
