--- a/templates/gas/SalesTable.html
+++ b/templates/gas/SalesTable.html
@@ -74,7 +74,7 @@
                             </div>
                         </template>
                         <template v-else>
-                            {% include 'SalesEdit.html' %}
+                            {% include 'gas/SalesEdit.html' %}
                         </template>
                     </div>
                     <div class="modal-footer">
