--- a/templates/gas/SalesTable.html
+++ b/templates/gas/SalesTable.html
@@ -7,9 +7,15 @@
     <div class="mt-3">
         <h1>Manage Sales</h1>
         <hr>
-        <div class="container">
-            <a type="button" data-toggle="modal" data-target="#salesModal"
-             class="btn btn-outline-success" href="#">Add sales</a>
+        <div class="form-row">
+            <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" data-toggle="modal" data-target="#salesModal" class="btn btn-success">Add
+                    sales</button>
+                {% if request.user.position == 'Manager' or request.user.position == 'Owner' %}
+                <button type="button" data-toggle="modal" data-target="#fuelModal" class="btn btn-primary">Add type of
+                    fuel</button>
+                {% endif %}
+            </div>
         </div>
     </div>
     <div v-if="loading" class="text-center mt-5">
@@ -43,7 +49,9 @@
                             <td>[[ sale.created_at ]]</td>
                             <td>[[ sale.type_of_fuel ]]</td>
                             <td>[[ sale.sales ]]</td>
+                            <td>[[ sale.price ]]</td>
                             <td>[[ sale.gas_station_assigned ]]</td>
+                            <td>[[ sale.dispensed_liter ]]</td>
                             <td><a href="#" data-toggle="modal" v-on:click="fetchSale(sale.id)"
                                     data-target="#editSalesModal" class="badge badge-info">Edit</a></td>
                         </tr>
@@ -56,7 +64,7 @@
     <!-- Edit Modal -->
     <div class="modal fade" id="editSalesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Edit Information</h5>
@@ -96,7 +104,7 @@
     <!-- Add Modal -->
     <div class="modal fade" id="salesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Add Information</h5>
@@ -115,6 +123,45 @@
                         </template>
                         <template v-else>
                             {% include 'gas/SalesAdd.html' %}
+                        </template>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <template v-if="saving">
+                            <button type="button" class="btn btn-primary" disabled><i class="fa fa-spinner fa-spin"></i>
+                                Save
+                                changes</button>
+                        </template>
+                        <template v-else>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </template>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Fuel Modal -->
+    <div class="modal fade" id="fuelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add Information</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form v-on:submit.prevent="addTypeOfFuel">
+                    <div class="modal-body">
+                        <template v-if="viewing">
+                            <div class="text-center">
+                                <div class="spinner-grow text-primary" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
+                            </div>
+                        </template>
+                        <template v-else>
+                            {% include 'gas/FuelAdd.html' %}
                         </template>
                     </div>
                     <div class="modal-footer">
