--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,17 @@
                 </div>
             </div>
         </div>
+        {% if request.user.position == 'Owner' or request.user.position == 'Manager' %}
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
+            <div class="card mb-3">
+                <a href="{% url 'prices' %}" class="card-header">Price Management</a>
+                <div class="card-body">
+                    <p class="card-text">View all <strong>Price</strong> data.
+                    </p>
+                </div>
+            </div>
+        </div>
+        {% endif %}
         <div class="col-lg-3 col-md-4 col-sm-6 mt-5">
             <div class="card mb-3">
                 <a href="{% url 'profile' %}" class="card-header">Profile</a>
