fixed list of fuel in the site and also the showing of pagination

--- a/templates/sales/SalesAdd.html
+++ b/templates/sales/SalesAdd.html
@@ -2,8 +2,8 @@
     <div class="form-group col-md-12">
         <label>Type of Fuel</label>
         <select class="custom-select" v-model="newSales.type_of_fuel">
-            <option v-for="fuel in typeOfFuel">
-                [[ fuel.name ]]
+            <option v-for="item in typeOfFuel.results" :key="item.id">
+                [[ item.name ]]
             </option>
         </select>
         {% if request.user.position == 'Manager' or request.user.position == 'Owner' %}
