--- a/templates/sales/SalesTable.html
+++ b/templates/sales/SalesTable.html
@@ -59,7 +59,7 @@
                 </table>
                 <!-- pagination -->
                 <hr>
-                <nav aria-label="..." v-if="next && previous === null">
+                <nav aria-label="...">
                     <ul class="pagination pull-right">
                         <li :class="[{ disabled: previous === null }, 'page-item']">
                             <a class="page-link" href="#" @click="previousPage">Previous</a>
