fixed the loading of profile due to pagination in DRF

--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -14,7 +14,7 @@
         </div>
         <div class="card profile" v-else>
             <h5 class="card-header">Account information</h5>
-            <div class="card-body" v-for="profile in profiles" :key="profile">
+            <div class="card-body" v-for="profile in profiles.results" :key="profile">
                 <div class="col-md-12 col-sm-12">
                     <label>Full name:</label> [[ profile.full_name ]]
                 </div>
