--- a/templates/fuel/FuelTable.html
+++ b/templates/fuel/FuelTable.html
@@ -3,18 +3,14 @@
 {% load static %}
 
 {% block content %}
-<div id="pos-price" v-cloak>
+<div id="pos-fuel" v-cloak>
     <div class="mt-3">
-        <h1>Manage Prices</h1>
+        <h1>Manage Fuel types</h1>
         <hr>
         <div class="form-row">
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" data-toggle="modal" data-target="#pricesModal" class="btn btn-success">Add
-                    Price</button>
-                {% if request.user.position == 'Manager' or request.user.position == 'Owner' %}
-                <button type="button" data-toggle="modal" data-target="#fuelModal" class="btn btn-primary">Add type of
-                    fuel</button>
-                {% endif %}
+                <button type="button" data-toggle="modal" data-target="#fuelModal" class="btn btn-success">Add
+                    fuel type</button>
             </div>
         </div>
     </div>
@@ -24,32 +20,34 @@
         </div>
     </div>
     <div class="card mt-5" v-else>
-        <div class="card-header">List Gasoline Stations</div>
+        <div class="card-header">List Fuel types</div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
-                            <th scope="col">Date</th>
-                            <th scope="col">Type of fuel</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Gas station assigned</th>
+                            <th scope="col">Date created</th>
+                            <th scope="col">Date updated</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Created by</th>
+                            <th scope="col">Updated by</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td colspan="7" class="text-center bg-warning" v-if="!prices.count">
-                                Currently there's no <strong>prices</strong> added.
+                            <td colspan="7" class="text-center bg-warning" v-if="!fuels.results">
+                                Currently there's no <strong>Sales</strong> added.
                             </td>
                         </tr>
-                        <tr v-for="price in prices.results">
-                            <td>[[ price.created_at ]]</td>
-                            <td>[[ price.type_of_fuel ]]</td>
-                            <td>[[ price.price ]]</td>
-                            <td>[[ price.gas_station_assigned ]]</td>
-                            <td><a href="#" data-toggle="modal" v-on:click="fetchPrice(price.id)"
-                                    data-target="#editPriceModal" class="badge badge-info">Edit</a></td>
+                        <tr v-for="item in fuels.results" :key="item.id">
+                            <td>[[ item.created_at ]]</td>
+                            <td>[[ item.updated_at ]]</td>
+                            <td>[[ item.name ]]</td>
+                            <td>[[ item.created_by ]]</td>
+                            <td>[[ item.updated_by ]]</td>
+                            <td><a href="#" data-toggle="modal" v-on:click="fetchFuel(item.id)"
+                                    data-target="#editFuelModal" class="badge badge-info">Edit</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -70,7 +68,7 @@
     </div>
 
     <!-- Edit Modal -->
-    <div class="modal fade" id="editPriceModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="editFuelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -80,7 +78,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form v-on:submit.prevent="updatePrice">
+                <form v-on:submit.prevent="updateFuel">
                     <div class="modal-body">
                         <template v-if="viewing">
                             <div class="text-center">
@@ -90,7 +88,7 @@
                             </div>
                         </template>
                         <template v-else>
-                            {% include 'price/PriceEdit.html' %}
+                            {% include 'fuel/FuelEdit.html' %}
                         </template>
                     </div>
                     <div class="modal-footer">
@@ -110,45 +108,6 @@
     </div>
 
     <!-- Add Modal -->
-    <div class="modal fade" id="pricesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add Information</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form v-on:submit.prevent="addPrice">
-                    <div class="modal-body">
-                        <template v-if="viewing">
-                            <div class="text-center">
-                                <div class="spinner-grow text-primary" role="status">
-                                    <span class="sr-only">Loading...</span>
-                                </div>
-                            </div>
-                        </template>
-                        <template v-else>
-                            {% include 'price/PriceAdd.html' %}
-                        </template>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <template v-if="saving">
-                            <button type="button" class="btn btn-primary" disabled><i class="fa fa-spinner fa-spin"></i>
-                                Save
-                                changes</button>
-                        </template>
-                        <template v-else>
-                            <button type="submit" class="btn btn-primary">Save changes</button>
-                        </template>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Fuel Modal -->
     <div class="modal fade" id="fuelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -159,7 +118,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form v-on:submit.prevent="addTypeOfFuel">
+                <form v-on:submit.prevent="addFuel">
                     <div class="modal-body">
                         <template v-if="viewing">
                             <div class="text-center">
@@ -191,5 +150,5 @@
 {% endblock %}
 
 {% block api %}
- <script src="{% static 'vue/src/gas/price.js' %}" type="text/javascript"></script>
+<script src="{% static 'vue/src/gas/fuel.js' %}" type="text/javascript"></script>
 {% endblock %}
