--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,6 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'prices' %}">Prices</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'fuels' %}">Fuels</a>
+                </li>
                 {% endif %}
             </ul>
             <span class="nav-item dropdown navbar-right">
