changed the name for card header

--- a/templates/price/PriceTable.html
+++ b/templates/price/PriceTable.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="card mt-5" v-else>
-        <div class="card-header">List Gasoline Stations</div>
+        <div class="card-header">List of Prices</div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table">
